--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/Mandi-Lekalakala" target="_blank"
+            >Mandi Lekalakala</a
+          >
+          and is <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
