--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
           <a href="https://github.com/Mandi-Lekalakala" target="_blank"
             >Mandi Lekalakala</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/Mandi-Lekalakala/shecodes-devops.git"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
